<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--This could have been either a constarin layout or linear layout because it is not very complicated, however I decided on a constrait to place the items more easily where I wanted-->
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.instructions.InstructionsFragment">

        <TextView
            android:id="@+id/instructionsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/inter"
            android:text="@string/instructions"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/view"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTxt"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/detailsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/details"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/view_desc"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/detailsDescTxt"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/details_desc"
            app:layout_constraintStart_toStartOf="@+id/detailsTxt"
            app:layout_constraintTop_toBottomOf="@+id/detailsTxt" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsDescTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
